crates/bayou_compiler/src/parser/snapshots/bayou_compiler__parser__tests__missing_paren.snap
---
source: crates/bayou_compiler/src/parser/tests.rs
info: "func main( { return 0; }"
---
- items:
    - ParseError
- - expected: "`)`"
    span:
      start: 11
      end: 12
  - expected: an item
    span:
      start: 11
      end: 12
  - expected: an item
    span:
      start: 23
      end: 24

