crates/bayou_compiler/src/parser/snapshots/bayou_compiler__parser__tests__no_brace.snap
---
source: crates/bayou_compiler/src/parser/tests.rs
info: "func main() -> int { return 0;"
---
- items:
    - ParseError
- - expected: "`}`"
    span:
      start: 0
      end: 0

