crates/bayou_compiler/src/parser/snapshots/bayou_compiler__parser__tests__no_semicolon.snap
---
source: crates/bayou_compiler/src/parser/tests.rs
info: "func main() -> int { return 0 }"
---
- items:
    - FuncDecl:
        name:
          ident: 1
          span:
            start: 5
            end: 9
        ret_ty: I64
        statements:
          - ParseError
- - expected: "`;`"
    span:
      start: 30
      end: 31

