crates/bayou_compiler/src/parser/snapshots/bayou_compiler__parser__tests__no_semicolon_or_return_value.snap
---
source: crates/bayou_compiler/src/parser/tests.rs
info: "func main() -> int { return }"
---
- items:
    - FuncDecl:
        name:
          ident: 1
          span:
            start: 5
            end: 9
        ret_ty: I64
        statements:
          - Return:
              kind: Void
              span:
                start: 21
                end: 27
- - expected: "`;`"
    span:
      start: 28
      end: 29

