crates/bayou_compiler/src/parser/snapshots/bayou_compiler__parser__tests__no_space.snap
---
source: crates/bayou_compiler/src/parser/tests.rs
info: "func main() -> int { return0; }"
---
- items:
    - FuncDecl:
        name:
          ident: 1
          span:
            start: 5
            end: 9
        ret_ty: I64
        statements:
          - ParseError
- - expected: a statement
    span:
      start: 21
      end: 28

